Add buildHealth to checks